--- a/JAVA/hello-spring/build.gradle
+++ b/JAVA/hello-spring/build.gradle
@@ -15,7 +15,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.6'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.7'
+	implementation 'org.springframework.boot:spring-boot-starter-web-services:2.7.7'
+	implementation 'com.mysql:mysql-connector-j:8.0.31'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
